fixes layout issues with "manageButtons" in details page

--- a/data-admin/widget.less
+++ b/data-admin/widget.less
@@ -38,4 +38,8 @@ data-admin {
   .progress > div {
     width: 100%;
   }
+
+  .details-menu {
+    position: absolute;
+  }
 }
